feat(config): validation and mailer config
