# swagger_output.json
@@ -23,6 +23,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "x-access-token",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "page",
             "in": "query",
             "type": "string"
@@ -46,6 +51,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -87,8 +95,11 @@
           }
         ],
         "responses": {
-          "500": {
-            "description": "Internal Server Error"
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -103,10 +114,49 @@
             "schema": {
               "type": "object",
               "properties": {
+                "otp_token": {
+                  "example": "any"
+                },
                 "email": {
                   "example": "any"
                 },
                 "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login/google": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "otp_token": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "google_id": {
                   "example": "any"
                 }
               }
@@ -136,6 +186,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "captcha": {
+                  "example": "any"
+                },
                 "username": {
                   "example": "any"
                 },
@@ -186,12 +239,12 @@
         }
       }
     },
-    "/activate-email/{activation_email}": {
+    "/activate-email/{activation_token}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "activation_email",
+            "name": "activation_token",
             "in": "path",
             "required": true,
             "type": "string"
